[package]
name = "simplevmaf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.18",features = ["derive"]}
indicatif = "0.17.7"
libvmaf-rs = "0.5.1"
num_cpus = "1.16.0"
shadow-rs = "0.26.1"
